[project]
name = "apollo-configs"
version = "0.1.0"
description = "apollo config pydantic settings"
readme = "README.md"
authors = [
    { name = "danerlt", email = "danerlt001@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.7",
    "requests>=2.32.4",
]

[project.scripts]
apollo-configs = "apollo_configs:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
