[project]
name = "apollo-configs"
version = "0.1.0"
description = "apollo config pydantic settings"
readme = "README.md"
authors = [
    { name = "danerlt", email = "danerlt001@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
]

[project.scripts]
apollo-configs = "apollo_configs:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "nb-log>=13.3",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]
